--- a/app/components/register/register.html
+++ b/app/components/register/register.html
@@ -1,1 +1,11 @@
-<p>This is the register view .</p>
+<div ng-controller="RegisterCtrl">
+    <form novalidate class="register-form">
+        <h1>Register page</h1>
+        <input type="text" ng-model="user.firstname" placeholder="First Name"/><br />
+        <input type="text" ng-model="user.lastname" placeholder="Last Name"/><br />
+        <input type="text" ng-model="user.email" placeholder="Email"/><br />
+        <a ng-click="sendRegisterForm(user)" class="login-button">Register</a>
+    </form>
+    <pre>{{user | json}}</pre>
+</div>
+
