Change file structure in modules.

--- a/app/components/register/registerView.html
+++ b/app/components/register/registerView.html
@@ -1,6 +1,7 @@
 <div ng-controller="RegisterCtrl">
     <form novalidate class="register-form">
         <h1>Register page</h1>
+        <p>Register a new account for myHealth.com</p>
         <input type="text" ng-model="user.firstname" placeholder="First Name"/><br />
         <input type="text" ng-model="user.lastname" placeholder="Last Name"/><br />
         <input type="text" ng-model="user.email" placeholder="Email"/><br />
