--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -1,6 +1,7 @@
  <div ng-controller="LoginCtrl">
    <form novalidate class="login-form">
        <h1>Login page</h1>
+       <p>Login with an existing account.</p>
      <input type="text" ng-model="user.username" placeholder="Username"/><br />
      <input type="password" ng-model="user.password" placeholder="Password" /><br />
      <a href="#" ng-click="sendLoginForm(user)" class="login-button">Login</a>
