--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -4,7 +4,7 @@
        <p>Login with an existing account.</p>
      <input type="text" ng-model="user.username" placeholder="Username"/><br />
      <input type="password" ng-model="user.password" placeholder="Password" /><br />
-     <a href="#" ng-click="sendLoginForm(user)" class="login-button">Login</a>
+     <a href="#" ng-click="login(user)" class="login-button">Login</a>
    </form>
    <pre>{{user | json}}</pre>
  </div>
