--- a/assets/css/Login.css
+++ b/assets/css/Login.css
@@ -6,6 +6,34 @@
   background-color: rgba(55, 55, 55, 0.5);
 }
 
+input[type="text"]:active,
+input[type="password"]:active,
+input[type="text"]:focus,
+input[type="password"]:focus{
+  background-color: rgba(70, 70, 70, 0.2);
+  color: white;
+}
+
+input[type="text"]:focus::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+  color:    #fff;
+}
+input[type="text"]:focus:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  color:    #fff;
+  opacity:  1;
+}
+input[type="text"]:focus::-moz-placeholder { /* Mozilla Firefox 19+ */
+  color:    #fff;
+  opacity:  1;
+}
+input[type="text"]:focus:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color:    #fff;
+}
+
+
+input[type="password"]:focus::-webkit-input-placeholder { color:    #fff;  }
+input[type="password"]:focus:-moz-placeholder { color:    #fff; opacity:  1;  }
+input[type="password"]:focus::-moz-placeholder { color:    #fff; opacity:  1;  }
+input[type="password"]:focus:-ms-input-placeholder {color:    #fff; }
 
 
 
