--- a/assets/css/Main.css
+++ b/assets/css/Main.css
@@ -274,11 +274,17 @@ ul.work-images li img:hover {
 }
 
 
-.navbar-inner {
-	background-color: rgba(55, 55, 55, 0.4);
-}
+.navbar-inner {  background-color: rgba(55, 55, 55, 0.3);  }
+.navbar {  border-bottom:  1px solid rgba(256, 256, 256, 0.2);  }
 
 body {
-	background: url("http://www.mrwallpaper.com/wallpapers/gradient-background.jpg");
+	background:
+			linear-gradient(
+				rgba(50, 50, 50, 0.1),
+				rgba(50, 50, 50, 0.1)
+			),
+			url("http://www.mrwallpaper.com/wallpapers/gradient-background.jpg");
+	background-size: cover;
+
 }
 
