--- a/app/components/register/registerView.html
+++ b/app/components/register/registerView.html
@@ -1,12 +1,13 @@
 <div ng-controller="RegisterCtrl">
-    <form novalidate class="register-form">
+    <form novalidate class="register-form" name="register">
         <h1>Register page</h1>
         <p>Register a new account for myHealth.com</p>
-        <input type="text" ng-model="user.firstname" placeholder="First Name"/><br />
-        <input type="text" ng-model="user.lastname" placeholder="Last Name"/><br />
-        <input type="text" ng-model="user.email" placeholder="Email"/><br />
-        <a ng-click="sendRegisterForm(user)" class="login-button">Register</a>
+        <input type="text" name="firstname" ng-model="user.firstname" placeholder="First Name" required/><br />
+        <input type="text" name="lastname" ng-model="user.lastname" placeholder="Last Name" required/><br />
+        <br/>
+        <input type="text" ng-model="user.username" name="username" placeholder="Username" required/>
+        <input type="password" ng-model="user.password" name="password" placeholder="Password" required/><br />
+        <a ng-click="sendRegisterForm(user, register)" class="login-button">Register</a>
     </form>
-    <pre>{{user | json}}</pre>
 </div>
 
