--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -4,7 +4,7 @@
        <p>Login with an existing account.</p>
      <input type="text" name="username" ng-model="user.username" placeholder="Username" required/><br />
      <input type="password" name="password" ng-model="user.password" placeholder="Password" required/><br />
-     <a href="#" ng-click="sendLoginForm(user, login)" class="login-button">Login</a>
+     <a href="#" ng-click="sendLoginForm(login)" class="login-button">Login</a>
    </form>
  </div>
 
