Tableview voor billView
Aanvullingen aan profile

--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,7 +1,12 @@
 <div class="container profile">
     <div class="span3"> <img src="assets/img/mini.png" alt=""> </div>
     <div class="span4">
-        <h1 editable-text="user.name" e-form="textBtnForm">{{ user.name || "empty" }}</h1>
+        <h1 editable-text="user.uname" e-form="textBtnForm">{{ user.uname || "empty" }}</h1>
+        <br/>
+        <h1 editable-text="user.fistname" e-form="textBtnForm">{{ user.firstname || "empty" }}</h1>
+        <br/>
+        <h1 editable-text="user.lastname" e-form="textBtnForm">{{ user.lastname || "empty" }}</h1>
+        <br/>
         <h4>Patient</h4>
         <br/>
         <br/>
