--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,10 +1,9 @@
 <div class="container profile">
     <div class="span3"> <img src="assets/img/mini.png" alt=""> </div>
     <div class="span4">
-        <h1 editable-text="user.uname" e-form="textBtnForm">{{ user.uname || "empty" }}</h1>
+        <h1>{{ user.uname || "empty" }}</h1>
         <br/>
-        <h1 editable-text="user.fistname" e-form="textBtnForm">{{ user.firstname || "empty" }}</h1>
-        <br/>
+        <h1 editable-text="user.firstname" e-form="textBtnForm">{{ user.firstname || "empty" }}</h1>
         <h1 editable-text="user.lastname" e-form="textBtnForm">{{ user.lastname || "empty" }}</h1>
         <br/>
         <h4>Patient</h4>
