aantal fixes aan bill

--- a/app/components/bills/billView.html
+++ b/app/components/bills/billView.html
@@ -1,6 +1,7 @@
-< ng-controller="LoginCtrl">
+<div ng-controller="BillCtrl">
     <h1>Rekeningen</h1>
     <br/>
+    <table>
     <tr>
         <tr ng-repeat="x in bills">
             <tr><td>{{ x.BillId }}</td></tr>
