--- a/app/components/register/registerView.html
+++ b/app/components/register/registerView.html
@@ -1,3 +1,7 @@
+<div ng-hide="!showAlert" class="alert alert-success">
+    <strong>Success!</strong> New user account is created.
+</div>
+
 <div ng-controller="RegisterCtrl">
     <form novalidate class="register-form" name="register">
         <h1>Register page</h1>
