--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,6 +1,6 @@
 
 <div class="container profile">
-    <div class="span3"> <img src="assets/img/mini.png" alt=""> </div>
+    <div class="span3"> <img class="profile_avatar" src="assets/img/avatar-placeholder.jpg" alt=""> </div>
     <div class="span4">
         <h1>{{ user.uname || "empty" }}</h1>
         <br/>
@@ -12,12 +12,13 @@
         <br/>
         <button class="btn btn-new-measurement"><i class="fa fa-plus"></i> New Measurement </i></button>
         <br/>
-        <button onclick="window.location='/#/bills'" class="btn btn-new-measurement"><i class="fa fa-credit-card"></i> Open bills </i></button>
+        <button onclick="document.location.href='/#/bills'" class="btn btn-new-measurement"><i class="fa fa-credit-card"></i> Open bills </i></button>
     </div>
     <div class="span1">
         <button class="btn btn-edit"  ng-click="textBtnForm.$show()" ng-hide="textBtnForm.$visible">
             <i class="fa fa-pencil"></i> Edit Profile
         </button>
-        <button type="submit" ng-show="textBtnForm.$visible" class="btn btn-primary" ng-click="test()">save</button>
+        <button type="submit" ng-show="textBtnForm.$visible" class="btn btn-primary" ng-click="saveChanges()">save</button>
     </div>
 </div>
+
